Start  Slight Recode
A recode with the purpose of removing all the parts of the plugin that I'm really not a fan of.